# drone_mapper

./: CMakeLists.txt  README.md  vcpkg.json
.devcontainer/: Dockerfile
include/IO/: ConfigParser.h  ErrorLogger.h  MapIO.h  Score.h
include/drone/: Drone.h  MapAlgorithm.h  MapBuilder.h
include/interfaces/: ILidarSensor.h  IMap3D.h  IMapBuilder.h  IMovementDriver.h  IPositionSensor.h
include/simulation/: CellMap.h  DenseVoxelMap.h  MockLidarSensor.h  MockMovementDriver.h  MockPositionSensor.h  SimulationState.h
include/types/: Commands.h  MapValue.h  Units.h
scenario1/: drone_config.txt  map_input.txt  mission_config.txt
scenario1/original_output/: map_output.txt
scenario2/: drone_config.txt  map_input.txt  map_output.txt  mission_config.txt
scenario2/original_output/: map_output.txt
scenario3/: drone_config.txt  map_input.txt  map_output.txt  mission_config.txt
scenario3/original_output/: map_output.txt
scenario4/: drone_config.txt  map_input.txt  map_output.txt  mission_config.txt
src/: main.cpp
src/IO/: ConfigParser.cpp  ErrorLogger.cpp  MapIO.cpp  Score.cpp
src/drone/: MapAlgorithm.cpp  MapBuilder.cpp  drone.cpp
src/simulation/: CellMap.cpp  DenseVoxelMap.cpp  MockLidarSensor.cpp  MockMovementDriver.cpp  MockPositionSensor.cpp
